@@ -1,6 +1,7 @@
 IconSet.crystalclear.icon.NewFolder=/linspire/clear/20x20/actions/folder_new.png
 IconSet.crystalclear.icon.NewEnvelope=/linspire/clear/20x20/actions/mail_new.png
 IconSet.crystalclear.icon.OpenArrow=/linspire/clear/20x20/actions/fileopen.png
+IconSet.crystalclear.icon.MessageOpen=/linspire/clear/20x20/actions/mail_generic.png
 IconSet.crystalclear.icon.Save=/linspire/clear/20x20/actions/filesave.png
 IconSet.crystalclear.icon.Cut=/linspire/clear/20x20/actions/editcut.png
 IconSet.crystalclear.icon.Copy=/linspire/clear/20x20/actions/editcopy.png
@@ -23,13 +24,13 @@ IconSet.crystalclear.icon.Redo=/linspire/clear/20x20/actions/redo.png
 IconSet.crystalclear.icon.Find=/linspire/clear/20x20/actions/find.png
 IconSet.crystalclear.icon.Headers=/linspire/clear/20x20/actions/text_top.png
 IconSet.crystalclear.icon.AllHeaders=/linspire/clear/20x20/actions/text_block.png
-IconSet.crystalclear.icon.Encrypt=/linspire/clear/20x20/actions/encrypted.png
-IconSet.crystalclear.icon.Key=/linspire/clear/20x20/actions/encrypted.png
-IconSet.crystalclear.icon.NoKey=/linspire/clear/20x20/actions/encrypted.png
-IconSet.crystalclear.icon.Lock=/linspire/clear/20x20/actions/encrypted.png
-IconSet.crystalclear.icon.UnLock=/linspire/clear/20x20/actions/decrypted.png
+IconSet.crystalclear.icon.Encrypt=/linspire/crystal/20x20/actions/encrypted.png
+IconSet.crystalclear.icon.Key=/linspire/crystal/20x20/actions/encrypted.png
+IconSet.crystalclear.icon.NoKey=/linspire/crystal/20x20/actions/encrypted.png
+IconSet.crystalclear.icon.Lock=/linspire/crystal/20x20/actions/encrypted.png
+IconSet.crystalclear.icon.UnLock=/linspire/crystal/20x20/actions/decrypted.png
 IconSet.crystalclear.icon.Encrypted.small=/linspire/outline/16x16/actions/encrypted.png
-IconSet.crystalclear.icon.Decrypted=/linspire/clear/20x20/actions/decrypted.png
+IconSet.crystalclear.icon.Decrypted=/linspire/crystal/20x20/actions/decrypted.png
 IconSet.crystalclear.icon.SaveAddress=/linspire/clear/20x20/actions/add_user.png
 IconSet.crystalclear.icon.Sign=/linspire/clear/20x20/actions/easymoblog.png
 IconSet.crystalclear.icon.HTML=/linspire/clear/20x20/mimetypes/html.png
