@@ -44,6 +44,7 @@ IconSet.javalobby.icon.NewFolder=/org/javalobby/icons/20x20png/NewFolder.png
 IconSet.javalobby.icon.NoKey=/org/javalobby/icons/20x20png/NoKey.png
 IconSet.javalobby.icon.Object=/org/javalobby/icons/20x20png/Object.png
 IconSet.javalobby.icon.OpenArrow=/org/javalobby/icons/20x20png/OpenArrow.png
+IconSet.javalobby.icon.MessageOpen=/org/javalobby/icons/20x20png/OpenArrow.png
 IconSet.javalobby.icon.Decrypted=/org/javalobby/icons/20x20png/UnLock.png
 IconSet.javalobby.icon.Paste=/org/javalobby/icons/20x20png/Paste.png
 IconSet.javalobby.icon.Attach=/org/javalobby/icons/20x20png/Pin.png
