@@ -27,7 +27,7 @@ FolderWindowToolbar.Copy.Image=Copy
 FolderWindowToolbar.Paste.Action=paste-from-clipboard
 FolderWindowToolbar.Paste.Image=Paste
 FolderWindowToolbar.Open.Action=file-open
-FolderWindowToolbar.Open.Image=OpenArrow
+FolderWindowToolbar.Open.Image=MessageOpen
 FolderWindowToolbar.Reply.Action=message-reply
 FolderWindowToolbar.Reply.Image=Reply
 FolderWindowToolbar.ReplyAll.Action=message-reply-all
@@ -50,7 +50,7 @@ OutboxWindowToolbar.Down.Image=Down
 OutboxWindowToolbar.Up.Action=message-previous
 OutboxWindowToolbar.Up.Image=Up
 OutboxWindowToolbar.Open.Action=file-open
-OutboxWindowToolbar.Open.Image=OpenArrow
+OutboxWindowToolbar.Open.Image=MessageOpen
 OutboxWindowToolbar.Send.Action=folder-send
 OutboxWindowToolbar.Send.Image=Send
 NewMessageWindowToolbar=Send:AttachFile:SaveDraft:|:Cut:Copy:Paste:Undo:Redo:|:Print:|:Detach:Sign:Encrypt
